Added logs